tests/errors/array_01.f90
program array_01
implicit none

integer :: a(5)
a = []

end program
